--- a/.github/workflows/pw-test.yml
+++ b/.github/workflows/pw-test.yml
@@ -3,22 +3,31 @@
 
 name: Playwright Tests
 on:
- push:
-   branches: [main, master]
- pull_request:
-   branches: [main, master]
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
 jobs:
- run-tests:
-   timeout-minutes: 5
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/checkout@v4
-     - uses: actions/setup-node@v4
-       with:
-         node-version: 22
-     - name: Install dependencies
-       run: npm ci
-     - name: Install Playwright Browsers
-       run: npx playwright install --with-deps
-     - name: Run Playwright tests
-       run: npm run test
+  run-tests:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npm run test
+      - name: Archive test results
+        if: success() || failure()
+        uses: action/upload-artifact@v3
+        with: 
+          name: test-reports
+          path: |
+            'playwright-report/**/*.*'
+            'test-results/**/*.*'
+    
