refactor test and smoke test workflow

--- a/.github/workflows/pw-test.yml
+++ b/.github/workflows/pw-test.yml
@@ -28,6 +28,6 @@ jobs:
         with: 
           name: test-reports
           path: |
-            './playwright-report/**/*.*'
-            './test-results/**/*.*'
+            ./playwright-report/**/*.*
+            ./test-results/**/*.*
     
