--- a/.github/workflows/pw-smoke-test.yml
+++ b/.github/workflows/pw-smoke-test.yml
@@ -32,3 +32,8 @@ jobs:
           path: |
             ./playwright-report/**/*.*
             ./test-results/**/*.*
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v5
+        if: success() || failure()
+        with:
+          report_paths: "./playwright-report/results.xml"
