--- a/.github/workflows/pw-test.yml
+++ b/.github/workflows/pw-test.yml
@@ -24,10 +24,15 @@ jobs:
         run: npm run test
       - name: Archive test results
         if: success() || failure()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with: 
           name: test-reports
           path: |
             ./playwright-report/**/*.*
             ./test-results/**/*.*
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v5
+        if: success() || failure()
+        with:
+          report_paths: "./playwright-report/results.xml"    
     
