--- a/.github/workflows/pw-test.yml
+++ b/.github/workflows/pw-test.yml
@@ -20,6 +20,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22
+          cache: "npm"
+          registry-url: "https://npm.pkg.github.com"
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
