--- a/.github/workflows/pw-smoke-test.yml
+++ b/.github/workflows/pw-smoke-test.yml
@@ -22,9 +22,17 @@ jobs:
           node-version: 22
           cache: "npm"
           registry-url: "https://npm.pkg.github.com"
+      - name: Cache playwright binaries
+        uses: actions/cache@v4
+        id: playwright-cache
+        with:
+          path: |
+            ~/.cache/ms-playwirght
+          key: $({ runner.os })-playwright
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
+        if: steps.playwright-cache.outputs.cashe-hit != 'true'
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npm run test:smoke
