--- a/.github/workflows/pw-smoke-test.yml
+++ b/.github/workflows/pw-smoke-test.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           path: |
             ~/.cache/ms-playwirght
-          key: $({ runner.os })-playwright
+          key: ${{ runner.os }}-playwright
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
