add debug cache

--- a/.github/workflows/pw-smoke-test.yml
+++ b/.github/workflows/pw-smoke-test.yml
@@ -29,6 +29,8 @@ jobs:
           path: |
             ~/.cache/ms-playwirght
           key: ${{ runner.os }}-playwright
+      - name: Debug Cache Path
+        run: ls -lah ~/.cache/ms-playwright || echo "Cache directory not found"
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
