--- a/.github/workflows/pw-test.yml
+++ b/.github/workflows/pw-test.yml
@@ -22,6 +22,9 @@ jobs:
           node-version: 22
           cache: "npm"
           registry-url: "https://npm.pkg.github.com"
+      - name: Get installed Playwright version
+        id: playwright-version
+        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
       - name: Cache playwright binaries
         if: always()
         uses: actions/cache@v3
@@ -29,7 +32,7 @@ jobs:
         with:
           path: |
             ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright  
+          key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}  
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
@@ -49,5 +52,13 @@ jobs:
         uses: mikepenz/action-junit-report@v5
         if: success() || failure()
         with:
-          report_paths: "./playwright-report/results.xml"    
+          report_paths: "./playwright-report/results.xml"
+      - name: Save cache always
+        id: save-playwright-cache
+        if: always()
+        uses: actions/cache/save@v3
+        with:
+          path: |
+            ~/.cache/ms-playwright
+            key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
     
