--- a/.github/workflows/pw-test.yml
+++ b/.github/workflows/pw-test.yml
@@ -33,7 +33,15 @@ jobs:
           path: |
             ~/.cache/ms-playwright
           key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}  
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        id: node-cashe
+        with:
+          path: |
+            node_modules
+          key: node_modules
       - name: Install dependencies
+        if: steps.node-cashe.outputs.cache-hit != 'true'
         run: npm ci
       - name: Install Playwright Browsers
         if: steps.playwright-cache.outputs.cashe-hit != 'true'      
