--- a/.github/workflows/pw-smoke-test.yml
+++ b/.github/workflows/pw-smoke-test.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           path: |
             node_modules
-          key: node_modules
+          key: node_modules-${{ hashFiles('package-lock.json')}}
       - name: Install dependencies
         if: steps.node-cashe.outputs.cache-hit != 'true'
         run: npm ci
