create dependency weorkflow

--- a/.github/workflows/pw-tests.yml
+++ b/.github/workflows/pw-tests.yml
@@ -71,6 +71,7 @@ jobs:
             key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
 
   run-all-tests:
+    needs: [run-smoke-tests]
     timeout-minutes: 5
     runs-on: ubuntu-latest
     permissions:
