--- a/.github/workflows/pw-tests.yml
+++ b/.github/workflows/pw-tests.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [main, master]
 jobs:
-  run-smoke-tests:
+  prepare-env:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     permissions:
@@ -46,6 +46,40 @@ jobs:
       - name: Install Playwright Browsers
         if: steps.playwright-cache.outputs.cashe-hit != 'true'      
         run: npx playwright install --with-deps
+        
+  run-smoke-tests:
+    needs: [prepare-env]
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: "npm"
+          registry-url: "https://npm.pkg.github.com"
+      - name: Get installed Playwright version
+        id: playwright-version
+        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
+      - name: Cache playwright binaries
+        if: always()
+        uses: actions/cache@v3
+        id: playwright-cache
+        with:
+          path: |
+            ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}  
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        id: node-cashe
+        with:
+          path: |
+            node_modules
+          key: node_modules-${{ hashFiles('package-lock.json')}}
       - name: Run Playwright tests
         run: npm run test:smoke
       - name: Archive test results
@@ -61,17 +95,9 @@ jobs:
         if: success() || failure()
         with:
           report_paths: "./playwright-report/results.xml"
-      - name: Save cache always
-        id: save-playwright-cache
-        if: always()
-        uses: actions/cache/save@v3
-        with:
-          path: |
-            ~/.cache/ms-playwright
-            key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
 
   run-all-tests:
-    needs: [run-smoke-tests]
+    needs: [run-smoke-tests, prepare-env]
     timeout-minutes: 5
     runs-on: ubuntu-latest
     permissions:
@@ -103,12 +129,6 @@ jobs:
           path: |
             node_modules
           key: node_modules-${{ hashFiles('package-lock.json')}}
-      - name: Install dependencies
-        if: steps.node-cashe.outputs.cache-hit != 'true'
-        run: npm ci
-      - name: Install Playwright Browsers
-        if: steps.playwright-cache.outputs.cashe-hit != 'true'      
-        run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npm run test:all
       - name: Archive test results
@@ -124,11 +144,3 @@ jobs:
         if: success() || failure()
         with:
           report_paths: "./playwright-report/results.xml"
-      - name: Save cache always
-        id: save-playwright-cache
-        if: always()
-        uses: actions/cache/save@v3
-        with:
-          path: |
-            ~/.cache/ms-playwright
-            key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
