--- a/.github/workflows/pw-test-cron.yml
+++ b/.github/workflows/pw-test-cron.yml
@@ -7,8 +7,8 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
-  schedule:
-    - cron: "5 4 * * 1-5"
+  # schedule:
+  #   - cron: "5 4 * * 1-5"
 jobs:
   prepare-env:
     timeout-minutes: 5
