--- a/.github/workflows/master-workflow.yml
+++ b/.github/workflows/master-workflow.yml
@@ -4,11 +4,20 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+
+
+permissions: # needed, because we need permissions in one of steps in child workflow (run-tests.yml)
+  contents: read
+  checks: write
+  id-token: write
+
+
 jobs:
   running-tests:
     strategy:
       # fail-fast is true by default
-      # fail-fast set to true will cancel all jobs if one of them will fail
       fail-fast: false
     uses: ./.github/workflows/simple-jobs.yml # calls other workflow
+    with:
+      version: 18
     secrets: inherit
