--- a/.github/workflows/simple-jobs.yml
+++ b/.github/workflows/simple-jobs.yml
@@ -1,16 +1,54 @@
-name: Playwright Tests - simple workflow triggered by workflow_call
+name: Playwright Tests - job triggered by workflow_call
 on:
   workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
+
+
+permissions:
+  contents: read
+  checks: write
+  id-token: write
+
+
 jobs:
   run-tests:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
-      - name: Print on console
-        run: echo "run-tests of workflow"
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ inputs.version }}
+          cache: "npm"
+          registry-url: "https://npm.pkg.github.com"
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npm run test:smoke
+      - name: Archive test results
+        if: success() || failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-reports-smoke-tests
+          path: |
+            playwright-report/**/*.*
+            test-results/**/*.*
+      - name: Publish smoke test report
+        if: success() || failure()
+        uses: mikepenz/action-junit-report@v4
+        with:
+          report_paths: "./playwright-report/results.xml"
+
+
   final-job:
     runs-on: ubuntu-latest
     needs: [run-tests]
     if: always()
     steps:
       - name: Print on console
-        run: echo "final-job of workflow"
+        run: echo "final-job of workflow based on node version ${{ inputs.version }}" 
