--- a/.github/workflows/sharding.yml
+++ b/.github/workflows/sharding.yml
@@ -1,8 +1,6 @@
 name: Playwright Tests - Simple Sharding
 on:
   workflow_dispatch: # MANUAL TRIGGER
-
-
 jobs:
   playwright-tests:
     timeout-minutes: 5
@@ -10,32 +8,31 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1/4, 2/4, 3/4, 4/4]
+        shardIndex: [1, 2, 3, 4]
+        shardTotal: [4]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test --shard ${{ matrix.shard }}
-
-
+        run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
       - name: Upload blob report to GitHub Actions Artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: all-blob-reports
+          name: blob-report-${{ matrix.shardIndex }}
           path: blob-report
           retention-days: 1
+
 
   merge-reports:
     if: always()
     needs: [playwright-tests]
-
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -43,12 +40,13 @@ jobs:
         with:
           node-version: 20
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: all-blob-reports
+          pattern: blob-report-*
           path: all-blob-reports
+          merge-multiple: true
       - name: Merge into HTML Report
         run: npx playwright merge-reports --reporter html ./all-blob-reports
       - name: Upload HTML report
