--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@playwright/test": "^1.55.0",
     "@types/node": "^22.7.7",
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "eslint": "^8.50.0"
   }
 }
